# zidnahum-hudaa

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
apps/accounts/: tests.py  urls.py  views.py
apps/adminstration/: apps.py  models.py
apps/awqaf/: apps.py  models.py
apps/comings/: apps.py  permissions.py  serializers.py  urls.py  views.py
apps/money/: apps.py  models.py
apps/points/: apps.py  serializers.py
apps/students/: models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/: manage.py
backend/accounts/: apps.py  serializers.py  tests.py  views.py
backend/adminstration/: actions.py  actions_serializers.py  actions_urls.py  actions_utils.py  actions_views.py  apps.py  extra_serializers.py  extra_urls.py  extra_utils.py  extra_views.py  permissions.py  tests.py  urls.py  utils.py  views.py
backend/awqaf/: models.py  serializers.py  tests.py  urls.py  views.py
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/comings/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/globals/: apps.py  models.py  serializers.py  urls.py  views.py
backend/money/: models.py
backend/points/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/quizz/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/reports/: serializers.py  urls.py  utils.py  views.py
backend/students/: apps.py  constants.py  models.py  permissions.py  serializers.py  tests.py  (+4 more)
project/: settings.py  wsgi.py
(+609 files in other folders)
